--- a/cardiovascular.html
+++ b/cardiovascular.html
@@ -24,80 +24,116 @@
     </nav>
 
     <main>
+
         <section>
-            <h2>Overview</h2>
-            <p>The cardiovascular system consists of the <strong>heart, blood vessels, and blood</strong>, working together to transport essential substances throughout the body.</p>
+            <h2>Overview of the Cardiovascular System</h2>
+            <p>
+            The cardiovascular system, also known as the circulatory system, is a complex network responsible for the transport of blood, nutrients, gases, and waste products throughout the body. It consists of the heart, blood vessels (arteries, veins, and capillaries), and blood. This system plays a crucial role in maintaining homeostasis, regulating body temperature, and protecting against disease through immune responses.
+            </p>
+        </section>
+
+        <section>
+            <h2>Heart Anatomy and Function</h2>
             <ul>
-                <li><strong>Functions:</strong> Delivers oxygen and nutrients, removes waste, regulates temperature, and maintains pH balance.</li>
-                <li><strong>Importance:</strong> Essential for sustaining life and supporting all other body systems.</li>
+            <li>
+            <strong>Chambers:</strong> The heart has four chambers: two atria (upper chambers) and two ventricles (lower chambers). The right side receives deoxygenated blood and pumps it to the lungs, while the left side receives oxygenated blood and pumps it to the body. <br>
+            <em>The right atrium receives blood from the superior and inferior vena cava, while the left atrium receives blood from the pulmonary veins. The ventricles are responsible for the main pumping action of the heart.</em>
+            </li>
+            <li>
+            <strong>Valves:</strong> Four main valves (tricuspid, pulmonary, mitral, and aortic) ensure unidirectional blood flow and prevent backflow during the cardiac cycle. <br>
+            <em>The tricuspid valve is between the right atrium and ventricle, the pulmonary valve is between the right ventricle and pulmonary artery, the mitral valve is between the left atrium and ventricle, and the aortic valve is between the left ventricle and aorta.</em>
+            </li>
+            <li>
+            <strong>Layers:</strong> The heart wall consists of three layers: endocardium (inner), myocardium (muscular middle), and epicardium (outer). <br>
+            <em>The myocardium is the thickest layer and is responsible for the heart's contractile strength. The endocardium lines the chambers and valves, while the epicardium forms part of the pericardium.</em>
+            </li>
+            <li>
+            <strong>Conduction System:</strong> Specialized cardiac muscle cells (SA node, AV node, bundle of His, bundle branches, and Purkinje fibers) coordinate the heartbeat by generating and transmitting electrical impulses. <br>
+            <em>The SA node initiates the heartbeat, causing atrial contraction. The impulse travels to the AV node, then through the bundle of His and Purkinje fibers, resulting in coordinated ventricular contraction.</em>
+            </li>
+            <li>
+            <strong>Pericardium:</strong> A double-walled sac that surrounds and protects the heart, containing a small amount of fluid to reduce friction during heartbeats. <br>
+            <em>The pericardium consists of a fibrous outer layer and a serous inner layer, which further divides into parietal and visceral layers.</em>
+            </li>
+            <li>
+            <strong>Septum:</strong> The muscular wall (interatrial and interventricular septa) that separates the right and left sides of the heart, preventing the mixing of oxygenated and deoxygenated blood. <br>
+            <em>Defects in the septum, such as atrial or ventricular septal defects, can lead to abnormal blood flow and require medical attention.</em>
+            </li>
             </ul>
         </section>
 
         <section>
-            <h2>Heart Anatomy</h2>
-            <p>The heart is a <strong>muscular organ</strong> that pumps blood through the circulatory system.</p>
+            <h2>Blood Vessels</h2>
             <ul>
-                <li><strong>Atria:</strong> Upper chambers that receive blood.</li>
-                <li><strong>Ventricles:</strong> Lower chambers that pump blood out.</li>
-                <li><strong>Valves:</strong> Ensure one-way blood flow (e.g., mitral, tricuspid, aortic, pulmonary).</li>
-                <li><strong>Coronary Arteries:</strong> Supply oxygen-rich blood to the heart muscle.</li>
-                <li><strong>Pericardium:</strong> Protective sac surrounding the heart.</li>
-                <li><strong>Septum:</strong> Wall dividing the left and right sides of the heart.</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Blood Circulation</h2>
-            <p>Blood circulates through two primary pathways:</p>
-            <ul>
-                <li><strong>Systemic Circulation:</strong> Oxygenated blood is delivered to tissues.</li>
-                <li><strong>Pulmonary Circulation:</strong> Blood is oxygenated in the lungs.</li>
-            </ul>
-            <p><strong>Cardiac Cycle:</strong> The sequence of events in one heartbeat, including contraction (systole) and relaxation (diastole).</p>
-        </section>
-
-        <section>
-            <h2>Types of Blood Vessels</h2>
-            <ul>
-                <li><strong>Arteries:</strong> Carry oxygen-rich blood away from the heart.</li>
-                <li><strong>Veins:</strong> Return deoxygenated blood to the heart.</li>
-                <li><strong>Capillaries:</strong> Facilitate exchange of gases and nutrients.</li>
-                <li><strong>Venules & Arterioles:</strong> Small vessels connecting capillaries to veins and arteries.</li>
+            <li>
+            <strong>Arteries:</strong> Carry oxygen-rich blood away from the heart (except pulmonary arteries). They have thick, elastic walls to withstand high pressure. <br>
+            <em>The largest artery is the aorta, which branches into smaller arteries and arterioles. Arteries play a key role in regulating blood pressure through vasoconstriction and vasodilation.</em>
+            </li>
+            <li>
+            <strong>Veins:</strong> Return deoxygenated blood to the heart (except pulmonary veins). Veins have thinner walls and contain valves to prevent backflow of blood. <br>
+            <em>Major veins include the superior and inferior vena cava. Muscle contractions and the presence of valves help move blood back to the heart, especially from the lower body.</em>
+            </li>
+            <li>
+            <strong>Capillaries:</strong> Microscopic vessels where exchange of gases, nutrients, and wastes occurs between blood and tissues. Their thin walls (one cell thick) facilitate rapid exchange. <br>
+            <em>Capillaries form extensive networks called capillary beds, ensuring efficient delivery and removal of substances at the cellular level.</em>
+            </li>
             </ul>
         </section>
 
         <section>
             <h2>Blood Components</h2>
             <ul>
-                <li><strong>Red Blood Cells:</strong> Transport oxygen via hemoglobin.</li>
-                <li><strong>White Blood Cells:</strong> Defend against infections.</li>
-                <li><strong>Platelets:</strong> Aid in blood clotting.</li>
-                <li><strong>Plasma:</strong> Fluid carrying nutrients, hormones, and waste.</li>
+            <li>
+            <strong>Red Blood Cells (Erythrocytes):</strong> Transport oxygen using hemoglobin and help carry carbon dioxide away from tissues. <br>
+            <em>Each red blood cell contains millions of hemoglobin molecules. Their biconcave shape increases surface area for gas exchange and allows flexibility to pass through capillaries.</em>
+            </li>
+            <li>
+            <strong>White Blood Cells (Leukocytes):</strong> Defend the body against infection and foreign invaders. <br>
+            <em>There are several types, including neutrophils, lymphocytes, monocytes, eosinophils, and basophils, each with specialized immune functions.</em>
+            </li>
+            <li>
+            <strong>Platelets (Thrombocytes):</strong> Essential for blood clotting and wound healing. <br>
+            <em>Platelets gather at sites of injury, stick to the damaged area, and work with clotting factors to form a stable blood clot.</em>
+            </li>
+            <li>
+            <strong>Plasma:</strong> The liquid portion of blood, containing water, proteins, hormones, nutrients, and waste products. <br>
+            <em>Plasma makes up about 55% of blood volume and transports substances throughout the body, including antibodies and clotting proteins.</em>
+            </li>
             </ul>
-            <p><strong>Fun Fact:</strong> An adult has about 5 liters of blood circulating in their body.</p>
         </section>
 
         <section>
-            <h2>Common Cardiovascular Disorders</h2>
+            <h2>Cardiac Cycle</h2>
+            <p>
+            The cardiac cycle consists of systole (contraction) and diastole (relaxation) phases. During systole, ventricles contract to pump blood out of the heart. During diastole, the heart relaxes and fills with blood. The cycle is regulated by electrical impulses originating from the sinoatrial (SA) node, known as the heart's natural pacemaker. <br>
+            <em>The cycle includes atrial systole (atria contract), ventricular systole (ventricles contract), and complete cardiac diastole (all chambers relax). Heart sounds ("lub-dub") are produced by the closing of heart valves during the cycle.</em>
+            </p>
+        </section>
+
+        <section>
+            <h2>Major Circulatory Pathways</h2>
             <ul>
-                <li><strong>Hypertension:</strong> High blood pressure affecting arteries.</li>
-                <li><strong>Atherosclerosis:</strong> Plaque buildup narrowing blood vessels.</li>
-                <li><strong>Heart Attack:</strong> Blockage of coronary arteries leading to tissue damage.</li>
-                <li><strong>Stroke:</strong> Disruption of blood flow to the brain.</li>
-                <li><strong>Arrhythmia:</strong> Irregular heartbeat.</li>
-                <li><strong>Heart Failure:</strong> Heart's inability to pump blood efficiently.</li>
+            <li>
+            <strong>Pulmonary Circulation:</strong> Transports deoxygenated blood from the right ventricle to the lungs and returns oxygenated blood to the left atrium. <br>
+            <em>Gas exchange occurs in the lungs, where carbon dioxide is released and oxygen is absorbed by the blood.</em>
+            </li>
+            <li>
+            <strong>Systemic Circulation:</strong> Delivers oxygenated blood from the left ventricle to the body and returns deoxygenated blood to the right atrium. <br>
+            <em>This pathway supplies all body tissues with nutrients and removes waste products.</em>
+            </li>
+            <li>
+            <strong>Coronary Circulation:</strong> Supplies blood to the heart muscle itself via the coronary arteries. <br>
+            <em>Blockage of coronary arteries can lead to myocardial infarction (heart attack) due to lack of oxygen to heart tissue.</em>
+            </li>
             </ul>
         </section>
 
         <section>
-            <h2>How to Keep Your Cardiovascular System Healthy</h2>
-            <ul>
-                <li>Exercise regularly (at least 150 minutes per week).</li>
-                <li>Eat a balanced diet low in saturated fats and salt.</li>
-                <li>Avoid smoking and limit alcohol consumption.</li>
-                <li>Manage stress and get enough sleep.</li>
-                <li>Monitor blood pressure and cholesterol levels.</li>
-            </ul>
+            <h2>Clinical Relevance</h2>
+            <p>
+            Disorders of the cardiovascular system include hypertension, atherosclerosis, myocardial infarction (heart attack), arrhythmias, and heart failure. Early detection and management are vital for reducing morbidity and mortality. <br>
+            <em>Risk factors for cardiovascular disease include high blood pressure, high cholesterol, smoking, diabetes, obesity, and a sedentary lifestyle. Preventive measures include regular exercise, a healthy diet, and routine medical checkups.</em>
+            </p>
         </section>
 
         <section>
@@ -115,15 +151,150 @@
     </footer>
 
     <script>
-        function startQuiz() {
-            document.getElementById("quizQuestion").innerText = "Which blood vessel carries oxygen-rich blood away from the heart?";
-        }
-        function submitAnswer() {
-            let answer = document.getElementById("quizAnswer").value.toLowerCase();
-            if (answer === "artery" || answer === "arteries") {
-                alert("Correct!");
-            } else {
-                alert("Try again!");
+        const quizQuestions = [
+            {
+                question: "Which layer of the heart wall is responsible for the contractile function?",
+                options: ["Endocardium", "Epicardium", "Myocardium", "Pericardium"],
+                correctIndex: 2
+            },
+            {
+                question: "Which valve prevents backflow of blood from the left ventricle to the left atrium?",
+                options: ["Tricuspid valve", "Pulmonary valve", "Mitral (bicuspid) valve", "Aortic valve"],
+                correctIndex: 2
+            },
+            {
+                question: "During which phase of the cardiac cycle does ventricular filling occur?",
+                options: ["Atrial systole", "Ventricular systole", "Ventricular diastole", "Isovolumetric contraction"],
+                correctIndex: 2
+            },
+            {
+                question: "Which vessel supplies oxygenated blood to the myocardium?",
+                options: ["Pulmonary artery", "Coronary artery", "Superior vena cava", "Aorta"],
+                correctIndex: 1
+            },
+            {
+                question: "Which component of the ECG corresponds to ventricular depolarization?",
+                options: ["P wave", "QRS complex", "T wave", "U wave"],
+                correctIndex: 1
             }
+        ];
+
+        let currentQuestion = 0;
+        let score = 0;
+
+        function startQuiz() {
+            currentQuestion = 0;
+            score = 0;
+            showQuestion();
+        }
+
+        function showQuestion() {
+            const quizQ = document.getElementById("quizQuestion");
+            const quizA = document.getElementById("quizAnswer");
+            quizA.style.display = "none";
+            quizA.value = "";
+            // Remove old options if any
+            let oldOptions = document.getElementById("quizOptions");
+            if (oldOptions) oldOptions.remove();
+            let oldFinish = document.getElementById("finishBtn");
+            if (oldFinish) oldFinish.remove();
+
+            if (currentQuestion < quizQuestions.length) {
+                const q = quizQuestions[currentQuestion];
+                quizQ.innerText = q.question;
+
+                // Create options
+                let optionsDiv = document.createElement("div");
+                optionsDiv.id = "quizOptions";
+                q.options.forEach((opt, idx) => {
+                    let label = document.createElement("label");
+                    label.style.display = "block";
+                    let radio = document.createElement("input");
+                    radio.type = "radio";
+                    radio.name = "mcq";
+                    radio.value = idx;
+                    label.appendChild(radio);
+                    label.appendChild(document.createTextNode(" " + opt));
+                    optionsDiv.appendChild(label);
+                });
+                quizQ.parentNode.insertBefore(optionsDiv, quizA);
+
+                // If last question, add Finish button
+                if (currentQuestion === quizQuestions.length - 1) {
+                    let finishBtn = document.createElement("button");
+                    finishBtn.id = "finishBtn";
+                    finishBtn.innerText = "Finish";
+                    finishBtn.onclick = finishQuiz;
+                    quizQ.parentNode.insertBefore(finishBtn, quizA.nextSibling);
+                }
+            } else {
+                showScore();
+            }
+        }
+
+        function submitAnswer() {
+            if (currentQuestion >= quizQuestions.length) return;
+            let radios = document.getElementsByName("mcq");
+            let selected = -1;
+            for (let i = 0; i < radios.length; i++) {
+                if (radios[i].checked) {
+                    selected = parseInt(radios[i].value);
+                    break;
+                }
+            }
+            const quizQ = document.getElementById("quizQuestion");
+            if (selected === -1) {
+                quizQ.innerText = "Please select an answer.";
+                return;
+            }
+            let q = quizQuestions[currentQuestion];
+            if (selected === q.correctIndex) {
+                score++;
+                currentQuestion++;
+                showQuestion();
+            } else {
+                quizQ.innerText = `Incorrect. The correct answer is: ${q.options[q.correctIndex]}`;
+                let oldOptions = document.getElementById("quizOptions");
+                if (oldOptions) oldOptions.remove();
+                let oldFinish = document.getElementById("finishBtn");
+                if (oldFinish) oldFinish.remove();
+                setTimeout(() => {
+                    currentQuestion++;
+                    showQuestion();
+                }, 1500);
+            }
+        }
+
+        function finishQuiz() {
+            // Check answer for last question before showing score
+            let radios = document.getElementsByName("mcq");
+            let selected = -1;
+            for (let i = 0; i < radios.length; i++) {
+                if (radios[i].checked) {
+                    selected = parseInt(radios[i].value);
+                    break;
+                }
+            }
+            const quizQ = document.getElementById("quizQuestion");
+            if (selected === -1) {
+                quizQ.innerText = "Please select an answer.";
+                return;
+            }
+            let q = quizQuestions[currentQuestion];
+            if (selected === q.correctIndex) {
+                score++;
+            }
+            currentQuestion++;
+            showScore();
+        }
+
+        function showScore() {
+            const quizQ = document.getElementById("quizQuestion");
+            let percent = Math.round((score / quizQuestions.length) * 100);
+            quizQ.innerText = `Quiz complete! Your score: ${percent}% (${score}/${quizQuestions.length})`;
+            let oldOptions = document.getElementById("quizOptions");
+            if (oldOptions) oldOptions.remove();
+            let oldFinish = document.getElementById("finishBtn");
+            if (oldFinish) oldFinish.remove();
         }
     </script>
