--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <button onclick="askChatbot()">Ask a Medical Question</button>
 
     <section id="anatomy">
-        <h2>Anatomical Systems</h2>
+        <h2 >Anatomical Systems</h2>
         <ul>
-            <li><a href="skeletal.html">Skeletal System</a></li>
-            <li><a href="muscular.html">Muscular System</a></li>
-            <li><a href="nervous.html">Nervous System</a></li>
-            <li><a href="cardiovascular.html">Cardiovascular System</a></li>
+            <li class="h"><a href="skeletal.html">Skeletal System</a></li>
+            <li class="m"><a href="muscular.html">Muscular System</a></li>
+            <li class="n"><a href="nervous.html">Nervous System</a></li>
+            <li class="r"><a href="cardiovascular.html">Cardiovascular System</a></li>
         </ul>
     </section>
 
@@ -50,10 +50,7 @@
 <div id="results"></div>
 
 
-    <svg id="anatomy-diagram" width="500" height="500">
-        <circle cx="250" cy="250" r="40" fill="blue" class="organ" data-name="Heart"/>
-        <circle cx="150" cy="300" r="30" fill="green" class="organ" data-name="Kidney"/>
-    </svg>
+    
    
     <section id="resources">
         <h2>Resources</h2>
